# EmpiricalComputation

./: .gitignore  README.md  pyproject.toml
algorithmic_timing_sanCheck/: SSP_DP_alg.py  linsearch.py
analysis/: aggregate_results.py
analysis/graphs/: graphGen.py  graphGenMatplot.py  selfgenGraph.py
baselines/algorithmic_timing_sanCheck/: binsearch.py  palsubstr.py  sorting.py
docs/: README.md  api-lmstudio.md  model_gemma-4-26b-a4b.yaml  model_qwen3.6-35b-a3b.yaml
generating_graphs/: langGraph.py
generating_graphs/csv_data/: Alg-SSP DP.csv  Alg-Sorting.csv  SSP.csv  Sort.csv  Sorted Search.csv  Unsorted Search.csv
llm-gpt-palindromic-substring/: llm_gpt_substring.py
llm-gpt-search-master/: llm_gpt_sorted_search.py  llm_gpt_unsorted_search.py
llm-gpt-sort-master/: avglen.txt  condition1.txt  correctness.txt  correctness10rand.txt  gen_error.txt  llm_gpt_generate_nums.py  llm_gpt_sort.py  llm_gpt_sort_10randDist.py  llm_gpt_sort_np_float.py  llm_gpt_sort_np_language.py  sizes10rand.txt  statistical_analysis.py  timeLang.txt  timeSort10rand.txt
llm-gpt-sort-master/Generate_examples/: processGens.py  sortedArrGen.py
llm-gpt-sort-master/MajorityVoting/: llm_gpt_sort_MJ.py  llm_gpt_sort_timecomp.py
llm-gpt-subset-sum/: genSSP.py  llm_genSSP.py  llm_gpt_ssp.py  llm_gpt_ssp_TF.py
results/: latency_probe.txt
results/figures/: table1_mock.csv  table1_mock.md
scripts/: benchmark_latency.py  make_mock_data.py  plot_all.py  run_experiments.py  valid_trials.py
tests/: test_live_api.py  test_parsing.py  test_presets.py  test_problems.py
(+55 files in other folders)
