[project]
name = "empcomp"
version = "0.1.0"
description = "Empirical Computation: clean re-implementation"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.50",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "num2words>=0.5.13",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/empcomp"]

[tool.empcomp]
# Defaults that scripts read; override with EMPCOMP_* env vars or CLI flags.
default_model = "gemma-4-26b-a4b"
default_base_url = "http://127.0.0.1:1234/v1"
default_n_repeats = 30
